--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ input, textarea{
     background-color: darkgray;
     border-radius: 10px;
     margin-left:10px ;
+    margin-top: 15px;
     font-weight: 600;
     box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.651) ;
 }
@@ -49,6 +50,7 @@ input, textarea{
     font-size: 50px;
     font-weight: 700;
 }
+
 @media(max-width:320px){
     .card{
         width: 100%;
