--- a/style.css
+++ b/style.css
@@ -55,4 +55,17 @@ input, textarea{
     .card{
         width: 100%;
     }
+    .nav{
+        display: flex;
+        flex-wrap: nowrap;
+        padding-left: 10px;
+    }
+    .nav-link{
+        margin-left: 8px;
+        padding-left: 4px;
+        width: 73px;   
+    }
+    .nav-item{
+        margin-left: -4px;
+    }
 }
