--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ input, textarea{
     border-radius: 10px;
     margin-top: 20px;
     cursor: pointer;
-   margin-left: 10px;
+    margin-left: 10px;
 }
 .nav-item{
     margin-top: 20px;
@@ -49,6 +49,80 @@ input, textarea{
     text-align: center;
     font-size: 50px;
     font-weight: 700;
+    
+}
+
+@media(max-width:991px){
+    .card {
+        width: 31%;
+        float: left;
+        margin: 7px;
+    }
+    .nav{
+        display: flex;
+        flex-wrap: nowrap;
+        padding-left: 10px;
+    }
+    .nav-link{
+        margin-left: 8px;
+        padding-left: 4px;
+        width: 90px; 
+        text-align: center;  
+        text-indent: 5px;
+    }
+    .nav-item{
+        margin-left: -4px;
+    }
+
+}
+@media(max-width:768px){
+    .card {
+        width: 30%;
+        float: left;
+        margin: 8px;
+    }
+}
+@media(max-width:553px){
+    .card {
+        width: 100%;
+        float: left;
+        margin: 5px;
+    }
+    .form-contro{
+        position: relative;
+        column:
+        width: 100%;
+
+    }
+}
+@media(max-width:485px){
+    .card {
+        width: 100%;
+        float: left;
+        margin: 5px;
+    }
+}
+@media( max-width:425px){
+    .nav{
+        display: flex;
+        flex-wrap: nowrap;
+        padding-left: 10px;
+    }
+    .nav-link{
+        margin-left: 8px;
+        padding-left: 4px;
+        width: 90px; 
+        text-align: center;  
+        text-indent: 3px;
+    }
+    .nav-item{
+        margin-left: -4px;
+    }
+    .card {
+        width: 100%;
+        float: left;
+        margin: 5px;
+    }
 }
 
 @media(max-width:320px){
@@ -63,9 +137,13 @@ input, textarea{
     .nav-link{
         margin-left: 8px;
         padding-left: 4px;
-        width: 73px;   
+        width: 73px; 
+        text-align: center;  
+        text-indent: 3px;
     }
     .nav-item{
         margin-left: -4px;
     }
+        
 }
+
